fixing a spacing issue

--- a/css/story.css
+++ b/css/story.css
@@ -170,6 +170,6 @@ body{
   font-size: 1.5em;
   font-family: 'Poppins', sans-serif;
   position:absolute;
-  top:4800px;
+  top:4850px;
   left:260px;
 }
